@@ -44,9 +44,7 @@
 #define SCIP_DEFAULT_INCLOBJCUTOFF          FALSE /**< include the objective cutoff when computing the relative interior? */
 #define SCIP_DEFAULT_RECOMPUTERELINT        FALSE /**< recompute relative interior in each separation call? */
 #define SCIP_DEFAULT_RELINTNORMTYPE           'o' /**< type of norm to use when computing relative interior */
-
-/* other parameters */
-#define SCIP_MAX_UNSUCCESSFULLCALLS             3 /**< turn of separation after this number of unsuccessful calls */
+#define SCIP_DEFAULT_MAXUNSUCCESSFULL           0 /**< turn off separation in current node after unsuccessful calls (-1 never turn off) */
 
 
 /** separator data */
@@ -59,9 +57,10 @@ struct SCIP_SepaData
    SCIP_Bool             inclobjcutoff;      /**< include the objective cutoff when computing the relative interior? */
    SCIP_Bool             recomputerelint;    /**< recompute relative interior in each separation call? */
    char                  relintnormtype;     /**< type of norm to use when computing relative interior */
+   int                   maxunsucessful;     /**< turn off separation in current node after unsuccessful calls (-1 never turn off) */
    SCIP_SOL*             sepasol;            /**< solution that can be used for generating close cuts */
    SCIP_Longint          discardnode;        /**< number of node for which separation is discarded */
-   int                   nunsuccessfulcalls; /**< number of consecutive unsucessful calls */
+   int                   nunsuccessful;      /**< number of consecutive unsuccessful calls */
 };
 
 
@@ -285,27 +284,27 @@ SCIP_DECL_SEPAEXECLP(sepaExeclpClosecuts)
             {
                if ( SCIPgetNCuts(scip) - noldcuts > sepadata->sepathreshold )
                {
-                  sepadata->nunsuccessfulcalls = 0;
+                  sepadata->nunsuccessful = 0;
                   *result = SCIP_NEWROUND;
                }
                else
                {
                   if ( SCIPgetNCuts(scip) > noldcuts )
                   {
-                     sepadata->nunsuccessfulcalls = 0;
+                     sepadata->nunsuccessful = 0;
                      *result = SCIP_SEPARATED;
                   }
                   else
-                     ++sepadata->nunsuccessfulcalls;
+                     ++sepadata->nunsuccessful;
                }
             }
 
             SCIPdebugMessage("Separated close cuts: %d (enoughcuts: %d, unsuccessfull: %d).\n", SCIPgetNCuts(scip) - noldcuts,
-               SCIPgetNCuts(scip) - noldcuts > sepadata->sepathreshold, sepadata->nunsuccessfulcalls);
+               SCIPgetNCuts(scip) - noldcuts > sepadata->sepathreshold, sepadata->nunsuccessful);
 
-            if ( sepadata->nunsuccessfulcalls > SCIP_MAX_UNSUCCESSFULLCALLS )
+            if ( sepadata->maxunsucessful >= 0 && sepadata->nunsuccessful > sepadata->maxunsucessful )
             {
-               SCIPdebugMessage("Turn off close cut separation, because of %d unsuccessfull calls.\n", sepadata->nunsuccessfulcalls);
+               SCIPdebugMessage("Turn off close cut separation, because of %d unsuccessfull calls.\n", sepadata->nunsuccessful);
                sepadata->discardnode = currentnodenumber;
             }
          }
@@ -336,7 +335,7 @@ SCIP_RETCODE SCIPincludeSepaClosecuts(
    SCIP_CALL( SCIPallocMemory(scip, &sepadata) );
    sepadata->sepasol = NULL;
    sepadata->discardnode = -1;
-   sepadata->nunsuccessfulcalls = 0;
+   sepadata->nunsuccessful = 0;
 
    /* include separator */
    SCIP_CALL( SCIPincludeSepa(scip, SEPA_NAME, SEPA_DESC, SEPA_PRIORITY, SEPA_FREQ, SEPA_MAXBOUNDDIST, SEPA_USESSUBSCIP, SEPA_DELAY,
@@ -380,6 +379,11 @@ SCIP_RETCODE SCIPincludeSepaClosecuts(
          "separating/closecuts/relintnormtype",
          "type of norm to use when computing relative interior: 'o'ne norm, 'i'nfinity norm",
          &sepadata->relintnormtype, TRUE, SCIP_DEFAULT_RELINTNORMTYPE, "oi", NULL, NULL) );
+
+   SCIP_CALL( SCIPaddIntParam(scip,
+         "separating/closecuts/maxunsucessful",
+         "turn off separation in current node after unsuccessful calls (-1 never turn off)",
+         &sepadata->maxunsucessful, TRUE, SCIP_DEFAULT_MAXUNSUCCESSFULL, -1, INT_MAX, NULL, NULL) );
 
    return SCIP_OKAY;
 }
