@@ -134,6 +134,7 @@ parameters:
 - renamed parameter <constraints/quadratic/mincutefficacyenfo> to <constraints/quadratic/mincutefficacyenfofac> and interpret it as a factor of the feasibility tolerance
 - removed fastmip setting 2, which means the dualsolution would not be calculated but because SCIP always asks for the dual solution, the lp would be reoptimized to calculate them; so it had no real effect
 - added parameters <branching/pscost/nchildren> and <branching/pscost/nary*> to enable and customize n-ary branching on external branching candidates (e.g., in spatial branching for MINLP)
+- added parameter <separating/closecuts/maxunsucessful> to turn off separation if we can not find cuts
 
 features:
 - flatzinc reader is now capable to read cumulative constraints
